# math

./: CMakeLists.txt
include/math/: math.hpp
src/: 16_2_elgamal.cpp  25_1.cpp  dummy.cpp
